# SmartFlashcards

./: CMakeLists.txt  README.md
docs/: checkpoint1_test.md  checkpoint2_plan.md  checkpoint2_tests.md  checkpoint_reflection.md  final_reflection.md  implementation_plan.md
include/: flashcard.h  flashcard_manager.h
src/: flashcard.cpp  flashcard_manager.cpp  main.cpp
tests/: test_feature.cpp  test_review.cpp
